cms/static/css/cms.css
/* This file is for your main application css. */

/*fonts*/

body {
  font-family: 'NunitoSans', Arial, sans-serif;
  letter-spacing: 0.7px;
  color: #242E50;
  min-height: 100%;
  height: 100%;
  margin: 0;
}

@font-face {
  font-family: 'NunitoSans';
  src: url('../fonts/nunito/NunitoSans-Light.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'NunitoSans-Italic';
  src: url('../fonts/nunito/NunitoSans-LightItalic.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'NunitoSans-Bold';
  src: url('../fonts/nunito/NunitoSans-Bold.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'Segoe UI';
  src: url('../fonts/segoe/SEGOEUI.TTF') format('truetype');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'Segoe UI-Bold';
  src: url('../fonts/segoe/SEGOEUIB.TTF') format('truetype');
}

.font {
  font-family: 'Segoe UI', 'NunitoSans', Arial,sans-serif;
}

.segoe {
  font-family: 'Segoe UI';
}

.segoe-bold {
  font-family: 'Segoe UI-Bold';
}

.nunito {
  font-family: 'NunitoSans';
}

.nunito-bold {
  font-family: 'NunitoSans-Bold';
}

.nunito-italic {
  font-family: 'NunitoSans-Italic';
}

a {
  color: inherit;
}

.banner p {
  margin: 0;
}

h1, h2, h3 {
  font-family: 'Segoe UI-Bold', sans-serif;
}

h2 > span.b {
  font-family: 'Segoe UI-Bold';
}

.cover h2 {
  font-family: 'Segoe UI-Bold';
  letter-spacing: 1.5px;
}

/*elements*/
.container {
  min-height:100vh;
  position:relative;
}

.button {
  border: none;
}

.cover-img p {
  font-family: 'NunitoSans';
  letter-spacing: 1px;
}

/* Phoenix flash messages */
.alert:empty {
  display: none;
}

.checked-fill:checked~label {
  background-color: rgba(250, 183, 129, 0.7);
}

.checked-fill:focus~label {
  outline: auto 5px -webkit-focus-ring-color;
}

.unchecked, .topic-unchecked {
  background-image: url(/images/White_Plus.png);
  background-position: right 9px top 50%;
  background-size: 15px;
  background-repeat: no-repeat;
}

.topic-checked-fill:checked~label {
  background-color: white;
  background-image: url(/images/Orange_Tick.png);
  background-position: right 9px top 50%;
  background-size: 15px;
  background-repeat: no-repeat;
  color: #242E50;
  border-color: #FAB781;
}

.filter-check:checked~.filter-sidebar {
  margin-left: 0;
}

.filter-check:not(:checked)~.filter-sidebar, .sidebar-offscreen {
  margin-left: -120vw;
}

.filter-check:not(:checked)~.filter-sidebar + .sidebar-overlay-js {
  display: none;
}

.filter-check:checked~.filter-sidebar + .sidebar-overlay-js {
  display: block;
}

.sidebar-overlay-nojs {
  display: none;
}

.filter-check:not(:checked)~.filter-sidebar,
.filter-check:checked~.filter-sidebar {
  -webkit-transition-duration: 0.5s;
	-moz-transition-duration: 0.5s;
	-o-transition-duration: 0.5s;
	transition-duration: 0.5s;
}

.sidebar {
  z-index: 10;
}

.stop-scrolling {
  height: 100%;
  overflow: hidden;
}

.hide-filters {
  height: 0;
  overflow: hidden;
}

.filter-arrow-hide {
  display: none;
}

.link-visited:visited {
  color: #9012FE;
}

.link-hover:hover {
  background-color: rgba(0, 158, 226, 0.2)
}

/*color palette*/

.lm-bg-orange {
  background-color: #FAB781;
}

.lm-bg-orange-hover:hover {
  background-color: #FAB781;
}

.lm-bg-orange-20 {
  background-color: rgba(250, 183, 129, 0.2)
}

.lm-bg-orange-70 {
  background-color: rgba(250, 183, 129, 0.7);
}

.lm-bg-dark-blue {
  background-color: #242E50;
}

.lm-bg-white {
  background-color: #FFFFFF;
}

.lm-bg-turquoise {
  background-color: #009EE2;
}

.lm-bg-grey {
  background-color: #c2c2c2;
}

.lm-bg-light-grey {
  background-color: #E9E9E9;
}

.lm-orange {
  color: #FAB781;
}

.lm-dark-blue, .lm-dark-blue-hover:hover {
  color: #242E50;
}

.lm-white {
  color: #FFFFFF;
}

.b--lm-white-hover:hover {
  border-color: #FFFFFF;
}

.lm-turquoise {
  color: #009EE2;
}

.lm-dark-turquoise {
  color: #00587e;
}

.lm-grey {
  color: #c2c2c2;
}

.lm-dark-grey {
  color: #767676;
}

.b--lm-orange {
  border-color: #FAB781;
}

.b--lm-dark-blue, .b--lm-dark-blue-hover:hover {
  border-color: #242E50;
}

.b--lm-white {
  border-color: #FFFFFF;
}

.b--lm-turquoise {
  border-color: #009EE2;
}

.b--lm-grey {
  border-color: #c2c2c2;
}

.focus-lm-orange:focus {
  outline: none;
  border:1px solid #FAB781;
}

footer p a {
  padding: 0 2em 0 2em;
  text-decoration: none;
}

/* Landing Page - resource tags */

.lh-tag {
  line-height: 1.7;
}

/* Landing Page - resource like buttons */

.like, .like_no_hover {
  background-image: url("../images/Thumbs_up_normal.svg");
  background-repeat: no-repeat;
}

.like:hover, .liked {
  background-image: url("../images/Thumbs_up_hover.svg");
}

.dislike, .dislike_no_hover {
  background-image: url("../images/Thumbs_down_normal.svg");
  background-repeat: no-repeat;
}

.dislike:hover, .disliked {
  background-image: url("../images/Thumbs_down_hover.svg");
}

.share {
  background-image: url("../images/Share.svg");
  background-repeat: no-repeat;
}

.share-email {
  background-image: url("../images/email-icon.svg");
  background-repeat: no-repeat;
}

.share-messenger {
  background-image: url("../images/messenger-icon.svg");
  background-repeat: no-repeat;
}

.share-whatsapp {
  background-image: url("../images/whatsapp-icon.svg");
  background-repeat: no-repeat;
}

.share-email:hover {
  background-image: url("../images/mail_hover.svg");
}

.share-messenger:hover {
  background-image: url("../images/messenger_hover.svg");
}

.share-whatsapp:hover {
  background-image: url("../images/whatsapp_hover.svg");
}


.blurred_background {
  background-image: url("../images/blurred_gradient.png");
}

/* Styleguide */

code {
  padding: 2px 4px;
  font-size: 90%;
  color: black;
  background-color: #E9E9E9;
  border-radius: 4px;
}

.h05 {
  height: 0.5rem;
}

.w05 {
  width: 0.5rem;
}

.h18 {
  height: 1.8rem;
}

.h45 {
  height: 12rem;
}

.pt5-plus {
  padding-top: 5rem;
}

@media screen and (min-width: 30em) {
  .h7-ns {
    height: 21.2rem;
  }
  a.ph5-plus-ns {
    padding-right: 13rem;
    padding-left: 13rem;
  }
  .lm-bg-dark-blue-hover:hover {
    background-color: #242E50;
  }
  .lm-white-hover:hover {
    color: #FFFFFF;
  }
  img.w-15-ns {
    width: 15%;
  }
}

#email_form h2 {
  font-family: 'Segoe UI-Bold';
}

#alpha h2, #alpha h3 {
  display: block;
  font-size: 1.5em;
  margin-top: 0.83em;
  margin-bottom: 0.83em;
  margin-left: 0;
  margin-right: 0;
  font-weight: bold;
} /* default styling for a h2 taken from https://www.w3schools.com/tags/tag_hn.asp */

@media only screen and (min-width: 30em) {
  #alpha h2, h3 {
    font-size: 1.25rem;
  }
}

#alphasection ul {
  margin: 2rem 0;
  list-style-type: none;
}

#alphasection ul li {
  text-indent: -30px;
}

#alphasection ul > li:before {
  content: "- ";
  text-indent: -30px;
}

.bg--lm-green {
  background-color: #E2F6D6;
}

.bg--lm-dark-green {
  background-color: #81c03d;
}

.bg--lm-dark-red {
  background-color: #FF1160;
}
.bg--lm-red {
  background-color: #e35c6c;
}

.bg--lm-light-red {
  background-color: #FFC6D1;
}

.b--lm-green {
  border-color: #81c03d;
}

.b--lm-dark-red {
  border-color: #FF1160;
}

.top--3 {
  top: -3rem;
}

.nr {
  resize: none;
}

@media only screen and (min-width: 950px) {
  /* the email button is half way over the
     edge of the bottom of the email card
     as per design:
     https://github.com/LDMW/app/issues/59#issuecomment-301418458*/
  #alphasection button {
    bottom: -30px;
  }

  .filter-check:not(:checked)~.filter-sidebar {
    margin-left: -50vw;
  }
}

.lm-feedback-label:before {
  content: '';
  background: #fff;
  border-radius: 100%;
  border: 1px solid grey;
  display: inline-block;
  width: 1.4em;
  height: 1.4em;
  position: relative;
  margin-right: 1em;
  vertical-align: top;
  cursor: pointer;
  text-align: center;
  transition: all 250ms ease;
}

.lm-feedback-radio:checked + .lm-feedback-label:before {
  background-color: #67CA39;
  box-shadow: inset 0 0 0 4px #fff;
}

.inner-shadow-active:active {
  box-shadow: 0 2px 7px 0 #000000 inset;
}

.feedback-section h4,
.feedback-section h3 {
  font-family: 'Segoe UI-Bold';
  margin-bottom: 1rem;
  margin-top: 0;
  font-size: 1.2rem;
  line-height: 1.2;
}

.feedback-form-section {
  font-size: 1.2rem;
  line-height: 1.2;
}

.feedback-section ul {
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.feedback-section p {
  font-family: "NunitoSans";
  font-size: 1rem;
  margin-top: 0.3rem;
  margin-bottom: 0.3rem;
}

.lm-flash-icon {
  top: -0.9rem;
  right: -0.8rem;
}

.lm-tick-icon {
  padding: 0.3rem 0.3rem 0.4rem 0.4rem;
}

.lm-exclamation-icon {
  padding: 0.3rem 0.6rem 0.4rem 0.65rem;
}

.dn-important {
  display: none !important;
}

lm-ls1 {
  letter-spacing: 0.1rem;
}

@media screen and (min-width: 1210px) {
  .homepage_video_container {
    width: 500px;
    height: 280px;
  }
}

@media screen and (min-width: 1121px) and (max-width: 1209px) {
  .homepage_video_container {
    width: 450px;
    height: 252px;
  }
}

@media screen and (min-width: 1040px) and (max-width: 1122px) {
  .homepage_video_container {
    width: 400px;
    height: 224px;
  }
}

@media screen and (min-width: 60em) and (max-width: 1039px) {
  .homepage_video_container {
    width: 350px;
    height: 196px;
  }
}

@media screen and (max-width: 60em) {
  .homepage_video_container {
    width: 100%;
  }
}

@media screen and (max-width: 60em) {
  .homepage_video_container {
    height: 440px;
  }
}

@media screen and (max-width: 870px) {
  .homepage_video_container {
    height: 360px;
  }
}

@media screen and (max-width: 740px) {
  .homepage_video_container {
    height: 280px;
  }
}

@media screen and (max-width: 600px) {
  .homepage_video_container {
    height: 200px;
  }
}

@media screen and (max-width: 650px) {
  div.banner_buttons {
    display: none;
  }
}

.rich-text p {
  max-width: 100%;
  min-width: 50%;
  overflow: hidden;
  word-wrap: break-word;
}

.rich-text img {
  max-width: 100%;
  height: auto;
  margin: 0 1em;
}

.right {
  float: right;
  clear: both;
}

.left {
  float: left;
  clear: both;
}

.block-heading {
  margin: 1em;
}

.block-paragraph {
  padding: 1em 2em;
}

.responsive-object {
    position: relative;
}

.responsive-object iframe,
.responsive-object object,
.responsive-object embed {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

#landing_page_hamburger > div > #beta-banner {
  position: relative !important;
}

#hamburger_content_id {
  top: -1000px;
  transition: 0.4s;
}

.show_hamburger {
  top: 0px !important;
}

.w-200 {
  width: 200%;
}

.w-330 {
  width: 330%;
}

.w-33 {
  width: 33%;
}

.mr-5 {
  margin-right: 5%;
}

.r-0 {
  right: 0%;
}

.r-50 {
  right: 50%;
}

.r-115 {
  right: 115%;
}

.r-120 {
  right: 120%;
}

.r-230 {
  right: 230%;
}

.l-20 {
  right: -20%;
}

.tag-container {
  transition: all 0.4s ease-in-out;
  -webkit-transition: all 0.4s ease-in-out; /** Chrome & Safari **/
  -moz-transition: all 0.4s ease-in-out; /** Firefox **/
  -o-transition: all 0.4s ease-in-out; /** Opera **/
}

.h6 {
  height: 22rem;
}

.inactive {
  -webkit-filter: grayscale(100%);
  filter: grayscale(100%);
  opacity: 0.5;
}

@media screen and (min-width:30em) {
  .w-200-ns {
    width: 200%;
  }

  .mr-1p-ns {
    margin-right: 1%;
  }

  .r-50-ns {
    right: 50%;
  }

  .r-112-ns {
    right: 112%;
  }

  .l-12-ns {
    right: -12%;
  }
}

